[package]
name = "google-dioxus-ads"
version = "0.1.0"
edition = "2021"
authors = ["Softonic", "Aaron Giovannini"]
description = "Google Dioxus Ads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4" }
open = "3.0.1"


[dev-dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }



